<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">instiMAP</string>
    <string name="about_version">Version 1.1</string>
    <string name="about_version_date">last updated on 15th July, 2014</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="ok">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="desc_header">Details:</string>
    <string name="location_search">Main Building in Centre for Environmental &amp; Science Engineering Department</string>
    <string name="activity_name_settings">Settings</string>
    <string name="setting_mute_key">mute</string>
    <string name="setting_mute_title">Mute</string>
	<string name="setting_mute_summary_on">Animation sounds will not be played</string>
	<string name="setting_mute_summary_off">Animation sounds will be played</string>
    <string name="setting_residences_key">residences</string>
	<string name="setting_residences_summary_on">Residences will be shown on the map</string>
	<string name="setting_residences_summary_off">Residences will not be shown on the map</string>
	<string name="setting_residences_title">Show residences</string>
	<string name="settings_last_updated_key">lastupdated</string>
	<string name="setting_convo_key">convo</string>
	<string name="setting_convo_title">Convocation Mode</string>
	<string name="setting_convo_summary_on">Shows convocation related content</string>
	<string name="setting_convo_summary_off">Hides convocation related content</string>
	
	<!-- Convocation Fragment -->
	<string name="convocation_background">Convocation Background</string>
	<string name="convocation_title">52nd Convocation, IIT Bombay</string>
	<string name="convocation_date">9 August, 2014</string>
	<string name="convocation_cheif_guest_header">CHIEF GUEST</string>
	<string name="convocation_cheif_guest_name">Dr. R A Mashelkar</string>
	<string name="convocation_cheif_guest_subtitle">National Research Scientist,\nCISR, National Chemical Laboratory, Pune </string>
	<string name="convocation_venues_header">VENUES</string>
	<string name="convocation_venues_info">Look for the colour of the dot\non the back of your invitation card</string>
	
	
	<string name="drawer_open">Open the drawer</string>
	<string name="drawer_close">Close the drawer</string>
	<string name="settings_title">Settings</string>
	
	<string name="events">Events</string>
</resources>
