<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="204dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/convo_image"
            android:scaleType="centerCrop"
            android:contentDescription="@string/convocation_background"/>
        <View 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/transparent_black_gradient"/>
        <TextView 
            android:id="@+id/convo_date"
            style="@style/ConvocationDate"
            android:tag="text_normal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/convo_title"
            style="@style/ConvocationTitle"
            android:tag="text_normal"
            android:layout_above="@id/convo_date"
            android:layout_alignParentLeft="true"/>
    </RelativeLayout>
    <TextView 
        style="@style/ConvocationSectionHeader"
        android:tag="text_normal"
        android:text="@string/convocation_cheif_guest_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:paddingLeft="4dp"
            android:layout_gravity="center"
            android:contentDescription="@string/convocation_cheif_guest_name"
            android:src="@drawable/cheif_guest" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView 
                android:tag="text_normal"
                style="@style/ConvocationCheifGuestName"/>
            <TextView
                android:tag="text_normal"
                style="@style/ConvocationCheifGuestSubtitle"/>
        </LinearLayout>
    </LinearLayout>
    <TextView 
        style="@style/ConvocationSectionHeader"
        android:text="@string/convocation_venues_header"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView 
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="12dp"
            android:padding="8dp"
            android:cropToPadding="true"
            android:src="@drawable/convo_venues_info"
            android:contentDescription="@string/convocation_venues_info"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:paddingRight="8dp"
            android:tag="text_normal"
            android:textSize="@dimen/convocation_cheif_guest_subtitle_size"
            android:text="@string/convocation_venues_info"/>
    </LinearLayout>
    <ListView
        android:id="@+id/convocation_venues_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
</ScrollView>
